# rust-bicycle

./: .gitignore  README.md
chap10/wordcount/: Cargo.toml  README.md
chap10/wordcount/src/: lib.rs  main.rs
chap10/wordcount/tests/: char.rs  line.rs
chap10/wordcount/tests/utils/: mod.rs
chap11/log-collector/api/: Cargo.toml
chap11/log-collector/cli/: Cargo.toml
chap11/log-collector/server/: Cargo.toml
chap11/log-collector/server/migrations/2019-05-11-072113_create_logs/: up.sql
chap11/log-collector/server/src/: db.rs  handlers.rs  main.rs  models.rs
chap11/start-aw/: Cargo.toml
chap11/start-aw/src/: main.rs
chap11/static-files/: Cargo.toml
chap11/static-files/src/: main.rs
chap11/templates/: Cargo.toml
chap11/templates/src/: main.rs
chap11/templates/templates/: index.html.tera
chap12/: cffi_readline  cffi_readline.rs  ptr  ptr.rs  ptr_ownership  ptr_ownership.rs  small_cffi  small_cffi.rs
chap12/c-api/: Cargo.toml  a.out  main.c
chap12/c-api/src/: lib.rs
chap12/cffi-ownership/: Cargo.toml
chap12/ffi-global/: Cargo.toml
chap12/opaque/: Cargo.toml
chap12/repr-c/: Cargo.toml
chap12/static-link/: Cargo.toml  build.rs
chap3/bitonic-sorter/: Cargo.toml
chap5/cast/: Cargo.toml
chap5/repr/: Cargo.toml
chap7/arc-rwlock/: Cargo.toml
chap7/closures/: Cargo.toml
chap7/interior-mutability/: Cargo.toml
chap7/nll/: Cargo.toml
chap7/rc/: Cargo.toml
chap7/static-rwlock/: Cargo.toml
chap7/tls/: Cargo.toml
chap7/toy-vec/: Cargo.toml
chap8/existential-impl-trait/: Cargo.toml
chap9/parser/: Cargo.toml
(+35 files in other folders)
