[package]
name = "server"
version = "0.1.0"
authors = ["cipepser <respepic@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
actix-web = "0.7"
failure = "0.1"
api = {path = "../api"}
dotenv = "0.13"
chrono = "0.4"

[dependencies.diesel]
features = ["postgres", "chrono", "r2d2"]
version = "1.4"